2022-11-30  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Fix CFLAGS setting

2022-11-29  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/macro.h: Rename macro "KERNAUX_PACKING_ATTR" to
	"KERNAUX_PACKED"
	* include/kernaux/macro.h: Add macros "KERNAUX_UNUSED", "KERNAUX_NORETURN",
	"KERNAUX_RETURNS_TWICE", "KERNAUX_ASM"
	* include/kernaux/printf_fmt.h: Make stable

2022-11-27  Alex Kotov  <kotovalexarian@gmail.com>

	* src/free_list.c: Bug fixed

2022-11-26  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.5.0 released