@@ -113,10 +113,19 @@
   args: [['%.30f', 0.0123456789012345678901234567890123456789]]
   float: true
 # Actual length is no more than 32
-# FIXME:
-# - result: '0.012345679000000000000000000000'
-#   args: [['%.31f', 0.0123456789012345678901234567890123456789]]
-#   float: true
-# - result: '0.012345679000000000000000000000'
-#   args: [['%.32f', 0.0123456789012345678901234567890123456789]]
-#   float: true
+- result: '0.012345679000000000000000000000'
+  args: [['%.31f', 0.0123456789012345678901234567890123456789]]
+  float: true
+- result: '0.012345679000000000000000000000'
+  args: [['%.32f', 0.0123456789012345678901234567890123456789]]
+  float: true
+# Actual length is no more than 32
+- result: '10.01234567900000000000000000000'
+  args: [['%.32f', 10.0123456789012345678901234567890123456789]]
+  float: true
+- result: '100.0123456790000000000000000000'
+  args: [['%.32f', 100.0123456789012345678901234567890123456789]]
+  float: true
+- result: '1000.012345679000000000000000000'
+  args: [['%.32f', 1000.0123456789012345678901234567890123456789]]
+  float: true
